[metadata]
name = qt_dev_helper
version = attr: qt_dev_helper.__version__
description = Tool to help developing Qt applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/qt-dev-helper
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = qt_dev_helper
project_urls =
    Documentation=https://qt-dev-helper.readthedocs.io
    Changelog=https://qt-dev-helper.readthedocs.io/en/latest/history.html
    Source=https://github.com/s-weigand/qt-dev-helper
    Tracker=https://github.com/s-weigand/qt-dev-helper/issues

[options]
packages = find:
install_requires =
    typer>=0.4.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
include =
    qt_dev_helper
    qt_dev_helper.*

[options.entry_points]
console_scripts =
    qt_dev_helper=qt_dev_helper.cli:app

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight
