[metadata]
name = qt_dev_helper
version = attr: qt_dev_helper.__version__
description = Tool to help developing Qt applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/qt-dev-helper
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = qt_dev_helper
project_urls =
    Documentation=https://qt-dev-helper.readthedocs.io
    Changelog=https://qt-dev-helper.readthedocs.io/en/latest/history.html
    Source=https://github.com/s-weigand/qt-dev-helper
    Tracker=https://github.com/s-weigand/qt-dev-helper/issues

[options]
packages = find:
install_requires =
    pydantic>=1.9.0
    rich>=12.0.0
    tomli>=2.0.1
    typer>=0.4.0
    qtsass>=0.3.0 ;python_version < '3.10'
    qtsass@https://github.com/spyder-ide/qtsass/archive/refs/heads/master.zip ;python_version >= '3.10'
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
include =
    qt_dev_helper
    qt_dev_helper.*

[options.entry_points]
console_scripts =
    qt-dev-helper=qt_dev_helper.cli.main_app:app

[options.extras_require]
pyside6 =
    PySide6

[darglint]
docstring_style = numpy
ignore_regex = _validate*

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight,click
