[metadata]
name = outputs
version = attr: outputs.__version__
description = Dummy test package
url = https://github.com/s-weigand/qt-dev-helper
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0

[options]
packages = find:
install_requires =
    PySide6
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
include =
    outputs
    outputs.*
